# sempiper

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  GRAPH_FIX.md  ISSUE_FIXED.md  Makefile  NEXT_STEPS_FOR_REAL_CODE.md  README.md  pyproject.toml
.claude/: README.md  project-context.md  settings.json
.claude/rules/: cache-design.md  commit-conventions.md  compile-graph-is-canonical.md  demo-inspired-by-sempipes-notebooks.md  demo-tests-no-real-llms.md  logging-strategy.md  no-bypass-sempipes-operators.md  no-edit-sempipes.md  no-silent-fallbacks.md  no-simulated-data.md  run-executes-once.md  run-tests-after-edits.md  setup-and-run.md
.cursor/: README.md
.cursor/agents/: test-demo-backend.md  test-demo-components.md  test-demo-frontend.md
.cursor/rules/: commit-conventions.mdc  demo-inspired-by-sempipes-notebooks.mdc  demo-tests-no-real-llms.mdc  demo-three-panel-design.mdc  no-bypass-sempipes-operators.mdc  no-edit-sempipes.mdc  run-executes-once.mdc  run-tests-after-edits.mdc  setup-and-run.mdc  use-poetry-not-python.mdc
.cursor/skills/decompose-edits-into-commits/: SKILL.md
.sempipes_trajectories/: optimise_fraud_simulated.json  optimise_house_simulated.json  optimise_museums_simulated.json
demo/: README.md  docker-compose.yml
demo/backend/: Dockerfile  main.py  pytest.ini
demo/frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
demo/frontend/src/: App.tsx  (+2 more)
doc/: style.css
docs/: index.html
experiments/: fraud_pipeline.py  house_pipeline.py  museum_pipeline.py  museum_pipeline_2.py  museum_pipeline_3.py
optimizer_scripts/: manifest.json  optimise_fraud.py  optimise_fraudbaskets.py  optimise_house.py  optimise_museums.py  placeholder.py  trajectory_tree_view.ipynb
pipeline_scripts/: 1_house_prices.py  2_fraud.py  3_museums.py  fraud.py  full.py  house_prices.py  house_prices_normalized  manifest.json  medium.py  met_10k.csv  museums.py  new.py  optimise_house.py  simple.py
scripts/: run-demo.sh  stop-demo.sh  verify-compile-edges.sh
utils/: test_real_code_generation.sh
(+139 files in other folders)
