[tool.poetry]
name = "sempipes-demo"
version = "0.1.0"
description = "Demo for sempipes"
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
# Demo backend
fastapi = ">=0.109.0"
uvicorn = { extras = ["standard"], version = ">=0.27.0" }
pydantic = ">=2.5.0"
httpx = ">=0.26.0"
# Load sempipes from the local symlink (sempipes/ must point to the sempipes repo)
sempipes = { path = "sempipes", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-asyncio = ">=0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
