[tool.poetry]
name = "sempipes-demo"
version = "0.1.0"
description = "Demo for sempipes"
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
# Demo backend
fastapi = ">=0.109.0"
uvicorn = { extras = ["standard"], version = ">=0.27.0" }
pydantic = ">=2.5.0"
httpx = ">=0.26.0"
# Load sempipes from the local symlink (sempipes/ must point to the sempipes repo)
sempipes = { path = "sempipes", develop = true }
autogluon = "^1.5.0"
soundfile = "^0.13.1"
torchaudio = ">=2.9,<2.10"
tensorflow = "^2.20.0"
unidecode = "^1.4.0"
duckdb = ">=0.10.0"
tabpfn = ">=0.1.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-asyncio = ">=0.23.0"
pytest-xdist = ">=3.5.0"
ruff = "^0.7.2"
mypy = "^1.17.1"
pre-commit = "^4.0.1"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"
exclude = ["sempipes/"]

[tool.ruff.lint]
select = ["F", "E", "I"]
ignore = ["E501", "F401"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
docstring-code-format = false
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["ALL"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict_optional = true
show_error_codes = true
exclude = "^sempipes/"
explicit_package_bases = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
